--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="bootstrap.min.css">
 </head>
 <body>
-  <script src="main.js"></script>
+  <script src="main.min.js"></script>
   <script>
     function getYmd(date) {
       var year = date.getFullYear();
